# apexai-os-meta

./: .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  Patch-AgentPrompt-v3-NoClone.ps1  README.md  skills-lock.json  start-test-result.txt  tier0-kb-validation-and-extension-packet.okf.md  tier0-kb-validation-deterministic-addendum.okf.md
apex-meta/apex-kb-cli/: MANIFEST.in  README.md  pyproject.toml
apex-meta/apex-kb-cli/docs/: ARCHITECTURE.md  IMPLEMENTATION-HANDOVER.md  MIGRATION-AND-LEGACY.md  OPERATOR-GUIDE.md  SEMANTIC-WORKER-GUIDE.md  TESTING-AND-CANARY.md
apex-meta/apex-kb-cli/evidence/canaries/: connector-backed-leela-subset.json  synthetic-nine-topic-canary.json
apex-meta/apex-kb-cli/evidence/canaries/light-smoke/: completion.json  index-manifest.json  query-ownership.json  query-status.json  run-config.yaml  semantic-acceptance.json  source-fixture.md  summary.json
apex-meta/apex-kb-cli/orchestration/: 00-ORCHESTRATOR-CHAT-HANDOVER.md  01-TARGET-DECISIONS-AND-VALUE-MATRIX.md  02-LIVE-STATE-AND-BRANCH-SAFETY.md  03-DELEGATION-AND-RECONCILIATION-CONTRACT.md  04-WORKING-CHAT-PROMPT-TEMPLATES.md  05-SEMANTIC-MAINLINE-AND-PROMPT-CONTRACT.md  CURRENT-STATE.yaml  README.md
apex-meta/apex-kb-cli/src/apex_kb/: __init__.py  cli.py  config.py  core.py  errors.py  io.py  lifecycle.py
apex-meta/apex-kb-cli/tests/: __init__.py  helpers.py  test_contracts.py  test_corpus.py  test_formats.py  test_lifecycle.py  test_phase2a_direct_main.py  test_product.py  test_product_contract.py  test_retrieval_integrity.py  test_semantic_integrity.py  test_update.py
(+3024 files in other folders)
