[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "apex-kb"
version = "0.1.0"
description = "Manifest-driven local knowledge-base lifecycle CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1,<9",
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
test = ["pytest>=8.2,<9"]

[project.scripts]
apex-kb = "apex_kb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apex_kb"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
