[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-kb"
version = "1.0.0"
description = "Manifest-driven local knowledge-base lifecycle CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Apex"}]
dependencies = [
  "click>=8.1,<9",
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0,<7",
  "pypdf>=5.9,<7",
]

[project.optional-dependencies]
test = ["pytest>=8.2,<9"]

[project.scripts]
apex-kb = "apex_kb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
apex_kb = ["schemas/*.json", "templates/*.md"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["apex_kb"]
